--- a/styles.css
+++ b/styles.css
@@ -13,3 +13,7 @@ body {
     /*background-position: center center;*/
     /*background-attachment: fixed;*/
   }
+
+div h1 {
+  text-align: center
+}
